creusot/tests/should_succeed/type_invariants/cycle.stderr
error[creusot]: encountered a cycle during translation: [{DefId(0:12 ~ cycle[9581]::{impl#0}::invariant)}, {DefId(0:13 ~ cycle[9581]::{impl#1}::pred)}, {DefId(0:12 ~ cycle[9581]::{impl#0}::invariant)}]
 --> cycle.rs:9:5
  |
9 |     fn invariant(self) -> bool {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

